# NextGen-Data-Architects-Project

./: .gitignore  DOCKER_APPLY_CHANGES.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  README.md  RESET_APP_USER_PASSWORD.md  RUN-FIRST.txt  docker-compose.yml  images.txt  ps.txt  ps_all.txt  render.yaml  run_backend.bat  stats.txt  stats2.txt  stats_utf8.txt
backend/: .dockerignore  Dockerfile  START.md  _pg_test.py  app.py  audit_log.py  config.py  create_rbac_tables.py  diagnose_app_users.py  email_notifications.py  enhanced_predictions.py  etl_col_detail.py  etl_diag.py  etl_minimal_diag.py  etl_pipeline.py  etl_quick_diag.py  etl_run_final.txt  etl_run_optimized_output.txt  etl_run_output.txt  etl_trace.txt  etl_trace2.txt  etl_trace_out.txt  etl_validate.py  etl_validate_out.txt  export_faculty_departments.py  export_user_snapshot.py  ml_models.py  pg_helpers.py  populate_dimension_tables.py  pyproject.toml  requirements.txt  reset_all_app_passwords.py  run_backend.bat  run_backend.sh  run_diagnose.bat  run_views.py  seed_users.py  setup_audit_db.py  setup_databases.py  start_server.py
backend/Check_Scripts/: check_data_status.py  check_databases.py
backend/api/: admin.py  analytics.py  auth.py  dashboards.py  export.py  hod.py  nextgen_query.py  predictions.py
backend/config/: __init__.py  academic.py  constants.py
backend/data/: .gitkeep  admin_settings.json  source_data1.csv  source_data2.csv
backend/etl_seeds/: admin_settings.json  user_snapshot.json
backend/scripts/: add_pdf_footer.py  count_students_per_program.py  fill_student_data.py  (+2 more)
(+841 files in other folders)
