[project]
name = "nextgen-backend"
version = "1.0.0"
description = "UCU Analytics Backend"
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.venv
  | \.git
  | __pycache__
  | \.mypy_cache
  | build
  | data
  | exports
  | models
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".venv", "__pycache__", "data", "exports", "models", "Check_Scripts", "test_scripts", "verify_Scripts"]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["api"]
